--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,13 +2,13 @@ apply plugin: 'com.android.application'
 apply plugin: 'android-apt'
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.3"
+    compileSdkVersion rootProject.ext.compileSdkVersion
+    buildToolsVersion rootProject.ext.buildToolsVersion
 
     defaultConfig {
         applicationId "com.example.andrearodriguez.androidchat"
-        minSdkVersion 16
-        targetSdkVersion 23
+        minSdkVersion rootProject.ext.minSdkVersion
+        targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
         versionName "1.0"
     }
@@ -30,13 +30,16 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.4.0'
-    compile 'com.android.support:design:23.4.0'
-    compile 'com.firebase:firebase-client-android:2.5.0'
-    compile 'com.jakewharton:butterknife:8.0.1'
-    apt 'com.jakewharton:butterknife-compiler:8.0.1'
-    compile 'org.greenrobot:eventbus:3.0.0'
-    compile 'com.google.firebase:firebase-auth:9.0.2'
-    compile 'com.android.support:multidex:1.0.0'
+
+    compile "com.android.support:appcompat-v7:$rootProject.ext.suportLibraryVersion"
+    compile "com.android.support:design:$rootProject.ext.suportLibraryVersion"
+    compile "com.firebase:firebase-client-android:$rootProject.ext.firebaseClientVersion"
+    compile "com.google.firebase:firebase-auth:$rootProject.ext.firebaseAuthVersion"
+    apt "com.jakewharton:butterknife-compiler:$rootProject.ext.butterknifeVersion"
+    compile "com.jakewharton:butterknife:$rootProject.ext.butterknifeVersion"
+    compile "com.android.support:multidex:$rootProject.ext.multidexVersion"
+    compile "de.hdodenhof:circleimageview:$rootProject.ext.circleimageview"
+    compile "org.greenrobot:eventbus:$rootProject.ext.eventbusVersion"
+
 }
 apply plugin: 'com.google.gms.google-services'
