--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,5 +42,6 @@ dependencies {
     compile "org.greenrobot:eventbus:$rootProject.ext.eventbusVersion"
     compile "com.github.bumptech.glide:glide:$rootProject.ext.GlideVersion"
 
+    compile 'com.android.support:support-v4:23.4.0'
 }
 apply plugin: 'com.google.gms.google-services'
